@@ -91,6 +91,7 @@ Changelog for 1.3.32
 * Fixed extra newline-related errors in tex template engine (Chris T)
 * Added updated Hungarian charts of accounts (Pongracz Istvan, 813)
 * Reopen books now works again (Chris T, 792)
+* Added address line to ar/ap transaction and invoice screens (Chris T)
 
 Nick P is Nick Prater
 
